// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ContextMenu.Item checkGrammar=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkGrammar=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item className="my-classname" 1`] = `
<li
  className="uu5-bricks-context-menu-item my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content="This is Content from ContentMixin" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content=12345 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item default props 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled=true 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    disabled={true}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item docKit examples UU5.Bricks.ContextMenu.Item example make snapshot 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer="Footer"
  forceRender={false}
  header="Header"
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden=true 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href="#idELEMENT" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#idELEMENT"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href="https://www.plus4u.net/" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="https://www.plus4u.net/"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item icon="mdi-menu" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-context-menu-item-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="mdi-menu"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item id="myId" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="myId"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item label="myLabel" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        "myLabel",
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item mainAttrs=undefined 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item name="myName" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex=true 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item offset=70 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={70}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item props.onClick() 1`] = `
<ContextMenu
  id="menu"
  shown={true}
>
  <ContextMenuItem
    id="items"
    label="Dopoledne"
    onClick={[Function]}
  />
</ContextMenu>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected=true 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item smoothScroll=3000 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
    smoothScroll={3000}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space=true 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-bricks-context-menu-item-space"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style="padding:8px; borderRadius: 2px" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target="_blank" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
    target="_blank"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target="_parent" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
    target="_parent"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target="_self" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target="_top" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
    target="_top"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector=false 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector=true 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item tooltip="My Tooltip" 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    href="#"
    offset={null}
    onClick={[Function]}
  />
</li>
`;
